--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,12 +3,16 @@
     "version": "1.0",
     "description": "Build an Extension!",
     "manifest_version": 2,
-    "permissions":["management"],
+    "permissions":[
+        "activeTab",
+        "tabs"
+    ],
     "browser_action": {
       "default_popup": "popup/index.html",
       "default_icon": "icon.png"
     },
-    "sandbox": {
-        "pages": ["popup/index.html"]
+    "background": {
+        "scripts": ["background.js"],
+        "persistent": false
     }
 }
