detect url in sandbox

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -14,5 +14,8 @@
     "background": {
         "scripts": ["background.js"],
         "persistent": false
+    },
+    "sandbox": {
+        "pages": ["sandbox/content.html"]
     }
 }
