--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "Getting Started Example",
+    "name": "BROtzivy",
     "version": "1.0",
-    "description": "Build an Extension!",
+    "description": "БРОтзывы - отзывы для своих",
     "manifest_version": 2,
     "permissions":[
         "activeTab",
