--- a/api/package.json
+++ b/api/package.json
@@ -3,14 +3,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "mocha \"./{,!(node_modules)/**/}*.spec.js\""
   },
   "dependencies": {
     "@koa/cors": "^2.2.1",
+    "config": "^2.0.1",
     "koa": "^2.5.1",
     "koa-body": "^4.0.1",
     "koa-router": "^7.4.0",
     "pg-promise": "^8.4.4",
     "sequelize": "^4.37.10"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
+    "mocha": "^5.2.0"
   }
 }
