--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,10 @@
     "config": "^2.0.1",
     "koa": "^2.5.1",
     "koa-body": "^4.0.1",
+    "koa-passport": "^4.1.0",
     "koa-router": "^7.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pg-promise": "^8.4.4",
     "sequelize": "^4.37.10"
   },
