--- a/api/package.json
+++ b/api/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "@koa/cors": "^2.2.1",
     "config": "^2.0.1",
+    "jsonwebtoken": "^8.3.0",
     "koa": "^2.5.1",
     "koa-body": "^4.0.1",
+    "koa-logger": "^3.2.0",
     "koa-passport": "^4.1.0",
     "koa-router": "^7.4.0",
     "passport-jwt": "^4.0.0",
