--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,12 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "mocha \"./{,!(node_modules)/**/}*.spec.js\""
+    "test": "mocha \"./{,!(node_modules)/**/}*.spec.js\"",
+    "docker-base:build": "docker build --no-cache -t reports-base -f DockerfileBase .",
+    "docker-base:bash": "docker run -it reports-base -f DockerfileBase /bin/bash",
+    "docker:build": "docker build --no-cache -t reports .",
+    "docker:run": "docker run -p 8080:9000 reports",
+    "docker:bash": "docker run -p 8080:9000 -it reports /bin/bash"
   },
   "dependencies": {
     "@koa/cors": "^2.2.1",
@@ -18,7 +23,8 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg-promise": "^8.4.4",
-    "sequelize": "^4.37.10"
+    "sequelize": "^4.37.10",
+    "sqlite3": "^4.0.2"
   },
   "devDependencies": {
     "chai": "^4.1.2",
