--- a/api/package.json
+++ b/api/package.json
@@ -7,9 +7,13 @@
     "test": "mocha \"./{,!(node_modules)/**/}*.spec.js\"",
     "docker-base:build": "docker build --no-cache -t reports-base -f DockerfileBase .",
     "docker-base:bash": "docker run -it reports-base -f DockerfileBase /bin/bash",
+    "docker-base:save": "docker save -o backup/reports-base.tar reports-base",
+    "docker-base:load": "docker load -i backup/reports-base.tar reports-base",
     "docker:build": "docker build --no-cache -t reports .",
     "docker:run": "docker run -p 8080:9000 reports",
-    "docker:bash": "docker run -p 8080:9000 -it reports /bin/bash"
+    "docker:bash": "docker run -p 8080:9000 -it reports /bin/bash",
+    "docker:save": "docker save -o backup/reports.tar reports",
+    "docker:load": "docker load -i backup/reports.tar reports"
   },
   "dependencies": {
     "@koa/cors": "^2.2.1",
