--- a/api/deploy/supervisord.conf
+++ b/api/deploy/supervisord.conf
@@ -1,6 +1,31 @@
-[program:worker]
+[supervisord]
+logfile = /tmp/supervisord.log
+logfile_maxbytes = 50MB
+logfile_backups=10
+loglevel = info
+pidfile = /tmp/supervisord.pid
+nodaemon = false
+minfds = 1024
+minprocs = 200
+umask = 022
+user = root
+identifier = supervisor
+directory = /tmp
+nocleanup = true
+childlogdir = /tmp
+strip_ansi = false
+environment = KEY1="value1",KEY2="value2"
+[program:db]
+command=/usr/lib/postgresql/9.5/bin/postgres -D /var/lib/postgresql/9.5/main -c config_file=/etc/postgresql/9.5/main/postgresql.conf
+stdout_logfile=/var/log/db.log
+autostart=true
+autorestart=true
+user=postgres
+stopsignal=KILL
+numprocs=1
+[program:app]
 command=/usr/bin/node /app/index.js
-stdout_logfile=/var/log/worker.log
+stdout_logfile=/var/log/app.log
 autostart=true
 autorestart=true
 user=www-data
