--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,6 +5,8 @@ COPY deploy/supervisord.conf /etc/supervisor/supervisord.conf
 ### NODE APP ###
 COPY . /app
 WORKDIR /app
+RUN echo $(cat .secret) >> /etc/environment
+RUN /bin/bash -c "source /etc/environment"
 RUN npm install
 
 ### POSRGRESS ###
@@ -14,8 +16,8 @@ ENV PATH $PATH:/usr/lib/postgresql/9.5/bin
 ENV PGDATA /var/lib/postgresql/data
 
 RUN /etc/init.d/postgresql start &&\
-    psql --command "CREATE USER postgresondocker WITH SUPERUSER PASSWORD 'postgresondocker';" &&\
-    createdb -O postgresondocker postgresondocker
+    psql --command "CREATE USER reports_owner WITH SUPERUSER PASSWORD '${PG_PASSWORD}';" &&\
+    createdb -O reports_owner reports
 
 RUN echo "host all  all    0.0.0.0/0  md5" >> /etc/postgresql/9.5/main/pg_hba.conf
 RUN echo "listen_addresses='*'" >> /etc/postgresql/9.5/main/postgresql.conf
@@ -26,4 +28,4 @@ USER root
 EXPOSE 5432
 EXPOSE  9000
 
-CMD ["supervisord"]
+CMD ["supervisord", "-c", "/etc/supervisor/supervisord.conf"]
