--- a/api/DockerfileBase
+++ b/api/DockerfileBase
@@ -14,4 +14,5 @@ RUN apt install -y build-essential psmisc sudo vim htop supervisor telnet curl g
 RUN apt install -y postgresql-9.5 postgresql-client-9.5 postgresql-contrib-9.5
 RUN curl -sL https://deb.nodesource.com/setup_8.x | bash -
 RUN apt install -y nodejs
+# RUN apt install -y policykit-1
 RUN apt -qq clean
